@@ -8,6 +8,8 @@ Changes - Apache mod_perl change logfile
 
 =item 1.16_01-dev
 
+new Apache::Symdump module
+
 allow $VirtualHost{'111.22.33.55'} = [...] syntax in <Perl> sections
 
 Perl*Handler commands will now call perl_startup() if Perl is not
